--- a/css/common.css
+++ b/css/common.css
@@ -4,14 +4,16 @@
 }
 
 body {
-  font-family: "Oswald", sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 300;
 }
 
 p {
+  /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
   line-height: 1.5;
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 1200px) {
   .container {
     padding: 0;
     max-width: 1000px;
