--- a/css/reset.css
+++ b/css/reset.css
@@ -8,9 +8,14 @@ a {
   color: inherit;
 }
 
+img {
+  max-width: 100%;
+}
+
 body {
   margin: 0;
 }
+
 p,
 h1,
 h2,
@@ -20,4 +25,5 @@ h5,
 h6 {
   margin-top: 0;
   margin-bottom: 0;
+  font-weight: 300;
 }
