--- a/css/style.css
+++ b/css/style.css
@@ -1,40 +1,36 @@
-@import url(reset.css);
-@import url(common.css);
+@import "reset.css";
+@import "common.css";
 
 /* css variables */
 html {
-  --mainTextColor: rgb(73, 194, 67);
-  --bgcColor: snow;
+  --mainTextColor: snow;
+  --bgcColor: rgb(215, 140, 140);
 }
 
+/* hero  */
 .hero {
   min-height: 300px;
-  background-color: #f4f4f4;
-  background-color: var(--mainTextColor);
+  background-color: var(--bgcColor);
 }
-
 .hero h2 {
   text-transform: uppercase;
   font-weight: normal;
   color: var(--mainTextColor);
 }
-
 .hero p {
   color: var(--mainTextColor);
 }
-
+/* main */
 .main {
   min-height: 400px;
-  border: 1px solid black;
+  border: 1px solid #000;
 }
-
 .main h2 {
   text-transform: uppercase;
   font-weight: normal;
   color: var(--mainTextColor);
   font-size: 2rem;
 }
-
 .main p {
   color: var(--mainTextColor);
   font-style: italic;
