--- a/css/style.css
+++ b/css/style.css
@@ -1,36 +1,40 @@
-@import "reset.css";
-@import "common.css";
+@import url(reset.css);
+@import url(common.css);
 
 /* css variables */
 html {
-  --mainTextColor: snow;
-  --bgcColor: rgb(215, 140, 140);
+  --mainTextColor: rgb(73, 194, 67);
+  --bgcColor: snow;
 }
 
-/* hero  */
 .hero {
   min-height: 300px;
-  background-color: var(--bgcColor);
+  background-color: #f4f4f4;
+  background-color: var(--mainTextColor);
 }
+
 .hero h2 {
   text-transform: uppercase;
   font-weight: normal;
   color: var(--mainTextColor);
 }
+
 .hero p {
   color: var(--mainTextColor);
 }
-/* main */
+
 .main {
   min-height: 400px;
-  border: 1px solid #000;
+  border: 1px solid black;
 }
+
 .main h2 {
   text-transform: uppercase;
   font-weight: normal;
   color: var(--mainTextColor);
   font-size: 2rem;
 }
+
 .main p {
   color: var(--mainTextColor);
   font-style: italic;
