--- a/css/style.css
+++ b/css/style.css
@@ -1,41 +1,33 @@
-@import url(reset.css);
-@import url(common.css);
+@import "reset.css";
+@import "common.css";
 
 /* css variables */
-html {
-  --mainTextColor: rgb(73, 194, 67);
-  --bgcColor: snow;
-}
 
+/* hero  */
 .hero {
   min-height: 300px;
   background-color: #f4f4f4;
-  background-color: var(--mainTextColor);
 }
-
 .hero h2 {
   text-transform: uppercase;
   font-weight: normal;
-  color: var(--mainTextColor);
+  color: dodgerblue;
 }
-
 .hero p {
-  color: var(--mainTextColor);
+  color: dodgerblue;
 }
-
+/* main */
 .main {
   min-height: 400px;
-  border: 1px solid black;
+  border: 1px solid #000;
 }
-
 .main h2 {
   text-transform: uppercase;
   font-weight: normal;
-  color: var(--mainTextColor);
+  color: dodgerblue;
   font-size: 2rem;
 }
-
 .main p {
-  color: var(--mainTextColor);
+  color: dodgerblue;
   font-style: italic;
 }
