--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,81 @@
-@import "reset.css";
-@import "common.css";
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
 
-/* css variables */
+a {
+  text-decoration: none;
+  color: inherit;
+}
 
-/* hero  */
-.hero {
-  min-height: 300px;
-  background-color: #f4f4f4;
+img {
+  max-width: 100%;
 }
-.hero h2 {
-  text-transform: uppercase;
-  font-weight: normal;
-  color: dodgerblue;
+
+body {
+  margin: 0;
 }
-.hero p {
-  color: dodgerblue;
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-top: 0;
+  margin-bottom: 0;
+  font-weight: 300;
 }
-/* main */
+
+.container {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+body {
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 300;
+}
+
+p {
+  /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
+  line-height: 1.5;
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    padding: 0;
+    max-width: 1000px;
+    margin: 0 auto;
+  }
+}
+
+main {
+  background-color: #935d8c;
+  min-height: 100vh;
+}
+
+.main-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.main-nav .main-nav__link {
+  padding: 25px;
+  background-color: white;
+  display: block;
+}
+
+button {
+  font-size: 50px;
+}
+
+button:hover {
+  font-size: 60px;
+}
+/*# sourceMappingURL=style.css.map */
